contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -46,6 +46,7 @@ nav a:hover{
 
 .wdevatags{
     text-decoration-line: none;
+    color: rgb(70, 69, 69);
 }
 
 main{
